app/solution/components/howToPlutoSolveSection/howToPlutoSolveSection.scss
.howToPlutoSolveSectionContainer {
  padding: 56px 0;
  margin: 0 auto;
  background-color: white;
}

.innerContainer {
  max-width: 1080px;
  width: 100%;
  margin: 0 auto;
}

.title {
  font-size: 36px;
  font-weight: 500;
  line-height: 1.39;
  letter-spacing: -0.25px;
  color: #5b83ee;
  margin-bottom: 22px;
}

.subTitle {
  height: 60px;
  opacity: 0.8;
  font-size: 16px;
  font-weight: 500;
  line-height: 3.75;
  letter-spacing: 1.31px;
  color: #5b83ee;
  margin-bottom: 8px;
}

.description {
  font-size: 20px;
  line-height: 1.6;
  color: #667997;
}

.contentWrapper {
  margin-top: 120px;
}

.contentTitle {
  position: relative;

  .number {
    position: absolute;
    font-size: 120px;
    font-weight: 500;
    line-height: 1;
    top: -52px;
    left: -28px;
    color: rgba(233, 237, 241, 0.5);
  }

  .titleContext {
    font-size: 32px;
    font-weight: 500;
    line-height: 1.38;
    color: #062e4e;
    z-index: 2;
    position: relative;

    small {
      font-size: 24px;
      color: #8c9fbf;
    }
  }
}

.firstContent {
  display: flex;
  align-items: center;
  margin-top: 48px;
}

.longBox {
  display: flex;
  justify-content: center;
  align-items: center;
  max-width: 277px;
  width: 100%;
  height: 120px;
  border-radius: 8px;
  background-color: rgba(91, 131, 238, 0.07);
  font-size: 22px;
  font-weight: 500;
  color: #5b83ee;
}

.smallBox {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  width: 180px;
  height: 120px;
  border-radius: 8px;
  background-color: #f6f8fb;
  font-size: 20px;
  text-align: center;
  color: #667997;

  & + & {
    margin-left: 20px;
  }
}

.plusIcon {
  margin: 0 44px;

  svg {
    width: 32px;
    height: 32px;
    color: #c4cfe1;
  }
}

.firstContentDesc {
  font-size: 18px;
  line-height: 1.56;
  color: #8c9fbf;
  margin-left: 8px;
  margin-top: 24px;
}

.cardContents {
  display: flex;
  flex-wrap: wrap;
  margin-top: 64px;
}

.card {
  max-width: 477px;
  width: 100%;
  border-radius: 8px;
  border: solid 1px #e9edf1;
  background-color: white;
  padding: 24px 16px;
  display: flex;
  margin: 12px 10px;

  .cardContent {
    max-width: 408px;
  }

  .cardTitle {
    font-size: 22px;
    font-weight: 500;
    line-height: 1.45;
    color: #5b83ee;
    margin-bottom: 12px;
  }

  .cardContext {
    font-size: 16px;
    line-height: 1.38;
    color: #667997;
  }

  .cardIcon {
    display: inline-flex;
    width: 32px;
    height: 32px;
    justify-content: center;
    align-items: center;
    margin-right: 8px;

    svg {
      width: 24px;
      height: 24px;
      color: #5b83ee;
    }
  }
}

@media (max-width: 1080px) {
  .howToPlutoSolveSectionContainer {
    padding: 40px 16px;
  }

  .contentTitle {
    .number {
      left: -4px;
    }

    .titleContext {
      margin-left: 24px;
    }
  }

  .firstContent {
    flex-direction: column;
  }

  .longBox {
    width: 100%;
    max-width: 100%;
  }

  .smallBox {
    width: 100%;

    & + & {
      margin: 16px 0 0 0;
    }
  }

  .plusIcon {
    margin: 16px 0;
  }

  .firstContentDesc {
    margin: 16px 0 0 0;
    text-align: center;
  }

  .cardContents {
    justify-content: center;
  }
}

